# wordsworth

./: .gitignore  .mcp.json  CLAUDE.md  CODEOWNERS  README.md  pyproject.toml  run-report.json
.habitat/: audit.jsonl  run-output-builder-apply-docs-contract-20260712-185653.md  run-output-reviewer-add-audit-worm-export-20260712-180905.md  run-output-reviewer-add-caching-20260711-214642.md  run-output-reviewer-add-object-storage-20260712-181607.md  run-output-reviewer-add-observability-20260712-182322.md  run-output-reviewer-add-rag-20260712-182814.md  run-output-reviewer-add-rate-limiting-20260712-183249.md  run-output-reviewer-apply-docs-contract-20260712-185931.md  run-output-reviewer-apply-docs-contract-20260712-190221.md  run-output-security-add-audit-worm-export-20260712-181156.md  run-output-security-add-caching-20260711-223201.md  run-output-security-add-object-storage-20260712-181900.md  run-output-security-add-observability-20260712-182548.md  run-output-security-add-rag-20260712-183013.md  run-output-security-add-rate-limiting-20260712-183449.md  run-report-builder-add-audit-worm-export-20260709-081944.html  run-report-builder-add-caching-20260709-075933.html  run-report-builder-add-evaluation-harness-20260709-074246.html  run-report-builder-add-key-lifecycle-20260709-210830.html  run-report-builder-add-object-storage-20260709-084634.html  run-report-builder-add-observability-20260709-080244.html  run-report-builder-add-ocr-20260709-211002.html  run-report-builder-add-rag-20260709-083139.html  run-report-builder-add-rate-limiting-20260709-075514.html  (+22 more)
(+228 files in other folders)
