[project]
name = "wordsworth"
version = "0.1.0"
description = "Sovereign pipeline turning government documents into a searchable, privacy-safe corpus"
readme = "README.md"
authors = [
    { name = "MWest2020", email = "mwest2020@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.44",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "opensearch-py>=3.2.0",
    "psycopg[binary]>=3",
    "pydantic>=2",
    "pypdf>=6.14.2",
    "sqlalchemy>=2",
    "zeef",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.uv.sources]
zeef = { git = "https://github.com/MWest2020/zeef" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "reportlab>=5.0.0",
]
